@@ -1937,22 +1937,28 @@ if [ "${clm_flg}" = 'Yes' ] && [ "${clm_hfc_or_mth}" = 'Yes' ]; then
 	fl_out[${clm_idx}]="${drc_out}/${out_nm}_${MM}_${yyyy_clm_srt}${MM}_${yyyy_clm_end}${MM}_climo.nc"
 	
 	if [ ${clm_md} = 'hfc' ]; then 
+	    DD=`printf "%02d" ${dpm[${clm_idx}]}` 
+	    tm_srt="${yyyy_clm_srt}-${MM}-01 00:00:01"
+	    let mthp1=$((clm_idx + 1))
+	    MMp1=`printf "%02d" ${mthp1}`
+	    tm_end="${yyyy_clm_end}-${MMp1}-01 00:00:00"
+	    let yr_endp1=$((yyyy_clm_end + 1))
+	    yyyy_clm_endp1=`printf "%02d" ${yr_endp1}`
+	    if [ ${clm_idx} -eq 12 ]; then
+		tm_end="${yyyy_clm_endp1}-01-01 00:00:00"
+	    fi # !December
+	    let srd=${dpy}*${tpd_out}
+	    let ssc=${dpm[${clm_idx}]}*${tpd_out}
+	    
 	    # Command to produce interleaved monthly climos
 	    if [ "${fl_nbr}" -eq 1 ]; then
-		DD=`printf "%02d" ${dpm[${clm_idx}]}` 
-		tm_srt="${yyyy_clm_srt}-${MM}-01 00:00:01"
-		let mthp1=$((clm_idx + 1))
-		MMp1=`printf "%02d" ${mthp1}`
-		tm_end="${yyyy_clm_end}-${MMp1}-01 00:00:00"
-		let yr_endp1=$((yyyy_clm_end + 1))
-		yyyy_clm_endp1=`printf "%02d" ${yr_endp1}`
-		if [ ${clm_idx} -eq 12 ]; then
-		    tm_end="${yyyy_clm_endp1}-01-01 00:00:00"
-		fi # !December
-		let srd=${dpy}*${tpd_out}
-		let ssc=${dpm[${clm_idx}]}*${tpd_out}
 		# Compute interleaved mean of single-file input (e.g., CMIP timeseries format)
-		cmd_clm[${clm_idx}]="${cmd_mpi[${clm_idx}]} ncra -O ${nco_opt} ${gaa_sng} -d time,'${tm_srt}','${tm_end}',${srd},${ssc},${tpd_out} ${fl_in} ${fl_out[${clm_idx}]}"
+		# Works though produces ypf sets of diurnal steps
+		#cmd_clm[${clm_idx}]="${cmd_mpi[${clm_idx}]} ncra -O ${nco_opt} ${gaa_sng} -d time,'${tm_srt}','${tm_end}',${srd},${ssc},${tpd_out} ${fl_in} ${fl_out[${clm_idx}]}"
+		tm_nbr=16 # fxm
+		tm_nbr=`ncks --trd -M ${fl_in} | grep -E -i "^Root record dimension 0:" | cut -f 10- -d ' '`
+		let ssc2=${tm_nbr}*${tpd_out}/${srd}
+		cmd_clm[${clm_idx}]="ncra -O ${nco_opt} ${gaa_sng} -d time,'${tm_srt}','${tm_end}',${srd},${ssc},${tpd_out} ${fl_in} ${fl_out[${clm_idx}]};ncra -O -d time,,,,${ssc2},${tpd_out} ${fl_out[${clm_idx}]} ${fl_out[${clm_idx}]}"
 		# Combine monthly into seasonal and annual means with nces
 #		cmd_mth2csn='nces --cb'
 #		cmd_csn2ann='nces --c2b'
@@ -1960,16 +1966,38 @@ if [ "${clm_flg}" = 'Yes' ] && [ "${clm_hfc_or_mth}" = 'Yes' ]; then
 		cmd_csn2ann='nces'
 	    else
 		# Concatenate means of each interleaved index of multi-file input (e.g., raw history output or multiple segments) 
+		# Cull this month from every year of climatology into single file
+		fl_mth[${clm_idx}]="${drc_out}/${out_nm}_${MM}_tms_foo_${yyyy_clm_srt}_${yyyy_clm_end}.nc"
+		cmd_clm[${clm_idx}]="ncrcat -O ${nco_opt} ${gaa_sng} -d time,'${tm_srt}','${tm_end}',${srd},${ssc} -p ${drc_in} ${fl_in[*]} ${fl_mth[${clm_idx}]}"
+		echo "quark ${cmd_clm[${clm_idx}]}"
+		eval ${cmd_clm[${clm_idx}]}
+		if [ "$?" -ne 0 ]; then
+		    printf "${spt_nm}: ERROR subset cmd_clm[${clm_idx}] failed. Debug this:\n${cmd_clm[${clm_idx}]}\n"
+		    exit 1
+		fi # !err
 		ilv_nbr=${tpd_out}
+		#let drn_hr=24/${tpd_out}
 		for ((ilv_idx=0;ilv_idx<ilv_nbr;ilv_idx++)); do
-		    if [ -z "${fml_nm_usr}" ]; then 
-			fl_out_tpl[${ilv_idx}]="${drc_out}/hfc_${yyyy_clm_srt}_${yyyy_clm_end}_mth_tpl.nc"
-		    else # !fml_nm_usr
-			fl_out_tpl[${ilv_idx}]="${drc_out}/hfc_${fml_nm}_${yyyy_srt_sgm[${ilv_idx}]}01_${yyyy_end_sgm[${ilv_idx}]}12_mth_tpl.nc"
-		    fi # !fml_nm_usr
+		    #let hh_srt=${ilv_idx}*${drn_hr}
+		    #HH=`printf "%02d" ${hh_srt}` 
+		    #tm_srt="${yyyy_clm_srt}-${MM}-01 ${HH}:00:01"
+		    #let hh_end=$((((ilv_idx + 1)*drn_hr ) % 24))
+		    #HH=`printf "%02d" ${hh_end}` 
+		    #tm_end="${yyyy_clm_end}-${MMp1}-01 00:00:00"
+		    ILV=`printf "%02d" ${ilv_idx}` 
+		    fl_out_tpl[${ilv_idx}]="${drc_out}/${out_nm}_${MM}_ilv${ILV}_${yyyy_clm_srt}_${yyyy_clm_end}.nc"
+		    cmd_ilv[${ilv_idx}]="ncra -O ${nco_opt} ${gaa_sng} -d time,${ilv_idx},,${tpd_out} ${fl_mth[${clm_idx}]} ${fl_out_tpl[${ilv_idx}]}"
+		    echo "quark ${cmd_ilv[${ilv_idx}]}"
+		    eval ${cmd_ilv[${ilv_idx}]}
+		    if [ "$?" -ne 0 ]; then
+			printf "${spt_nm}: ERROR subset cmd_ilv[${ilv_idx}] failed. Debug this:\n${cmd_ilv[${ilv_idx}]}\n"
+			exit 1
+		    fi # !err
 		done # !ilv_idx
-		cmd_clm[${clm_idx}]="${cmd_mpi[${clm_idx}]} ncrcat --cb -O ${nco_opt} ${gaa_sng} -p ${drc_in} ${fl_tpd_all} ${fl_out[${clm_idx}]}"
-	    fi # !fl_nbr
+		    /bin/rm ${fl_mth[${clm_idx}]}
+		    cmd_clm[${clm_idx}]="ncrcat -O ${nco_opt} ${gaa_sng} ${drc_out}/${out_nm}_${MM}ilv* ${fl_out[${clm_idx}]}"
+		    echo "quark ${cmd_clm[${clm_idx}]}"
+	     fi # !fl_nbr
 	elif [ ${clm_md} = 'mth' ]; then 
 	    cmd_clm[${clm_idx}]="${cmd_mpi[${clm_idx}]} ncra --cb -O ${nco_opt} ${gaa_sng} -p ${drc_in} ${fl_all} ${fl_out[${clm_idx}]}"
 	    # Combine monthly into seasonal and annual means with ncra
